--- a/fakepull.cabal
+++ b/fakepull.cabal
@@ -22,30 +22,29 @@ source-repository head
   type: git
   location: https://github.com/igrep/haskell-fakepull
 
-library
-  exposed-modules:
-      Test.Pull.Fake.Pure
-      -- Test.Pull.Fake.IO
-  hs-source-dirs:
-      src
+common deps
   build-depends:
       base >=4.7 && <5
     , exceptions
     , mtl
-    , containers
   default-language: Haskell2010
 
+library
+  import: deps
+  exposed-modules:
+      Test.Pull.Fake.Pure
+      Test.Pull.Fake.IO
+  hs-source-dirs:
+      src
+
 test-suite fakepull-test
+  import: deps
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
-    , fakepull
-    , exceptions
-    , containers
+      fakepull
     , hspec
     , QuickCheck
-  default-language: Haskell2010
